public/css/social.scss
nav,
#social {
    display: flex;
    gap: 10px;
}

nav {
    flex-wrap: wrap;
    justify-content: center;
}

#social {
    a {
        text-decoration: none;

        img {
            height: 1.5rem;
            filter: invert(1);
            opacity: 0.6;

            &:hover {
                opacity: 1;
            }
        }
    }
}

